samples/_failures_safe/1761517496_cb70be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef136f18.c: In function ‘main’:
./samples/SAFE/__tmp_ef136f18.c:148:12: error: missing terminating " character
  148 |     printf("Press Ctrl+D (Linux) or Ctrl+Z
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ef136f18.c:148:5: error: expected expression at end of input
  148 |     printf("Press Ctrl+D (Linux) or Ctrl+Z
      |     ^~~~~~
./samples/SAFE/__tmp_ef136f18.c:148:5: error: expected declaration or statement at end of input
